[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Door/doorLockedGreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Door/doorOpen.png" type="Texture" id=2]
[ext_resource path="res://Assets/Door/doorClosed.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Exit.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/question_003.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/pepSound1.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 168, 40 )

[node name="LevelExit" type="Area2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -24 )
scale = Vector2( 0.72, 0.72 )
frames = SubResource( 1 )
animation = "locked"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="NearExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearExit"]
shape = SubResource( 3 )

[node name="SoundUnlocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Effects"

[node name="SoundLocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Effects"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="." to="." method="_on_LevelExit_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LevelExit_body_exited"]
[connection signal="body_entered" from="NearExit" to="." method="_on_NearExit_body_entered"]
[connection signal="body_exited" from="NearExit" to="." method="_on_NearExit_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
